update javadoc